# BankGuard

./: .env.example  .pre-commit-config.yaml  README.md  database.py  docker-compose.yml  exceptions.py  ledger.py  main.py  pyproject.toml  schemas.py
migrations/: 001_create_tables.sql  002_add_constraints.sql  003_add_indexes.sql
scripts/: db.py  run_migrations.py  seed_data.py
scripts/seed/: config.py  generators.py  ledger.py
