[project]
name = "bankguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.32.0",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.3.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-html>=4.2.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pre-commit>=4.6.1",
    "ruff>=0.15.22",
]
